--- a/src/styles/sidebarStyle.css
+++ b/src/styles/sidebarStyle.css
@@ -8,11 +8,11 @@
   background: var(--sidebar-color);
   /* background-color: palevioletred; */
   transition: var(--tran-05);
-  z-index: 100000;
+  z-index: 100;
 }
 .sidebar.close {
   width: 88px;
-  opacity: 1 !important;
+  /* opacity: 1 !important; */
 }
 
 /* ===== Reusable code - Here ===== */
@@ -54,6 +54,7 @@
 }
 .sidebar.close .text {
   opacity: 0;
+  z-index: 10;
 }
 /* =========================== */
 
